--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Picking Engine - Swing Trade Edition</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+/* Add all your CSS here - I'll provide it */
+/* [The full CSS from the original design] */
+</style>
 </head>
 <body>
     <div class="container">
